little github pages compat

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <link rel="stylesheet" href="style.css" />
-    <script src="/index.js" type="module"></script>
+    <link rel="stylesheet" href="./style.css" />
+    <script src="./index.js" type="module"></script>
   </head>
   <body>
     <div id="carousel" class="carousel slide" data-ride="carousel">
