--- a/index.html
+++ b/index.html
@@ -51,13 +51,76 @@
         <span class="sr-only">Next</span>
       </a>
       <div class="carousel-actions">
-        <a class="carousel-control-favorite carousel-action" href="#carousel" role="button"
+        <a
+          class="carousel-control-favorite carousel-action"
+          href="#carousel"
+          role="button"
           >❤️</a
         >
-        <a class="carousel-control-see-favorites carousel-action" href="#carousel" role="button"
+        <a
+          class="carousel-control-see-favorites carousel-action"
+          href="#carousel"
+          role="button"
           >👀</a
         >
-        <a class="carousel-control-roll carousel-action" href="#carousel" role="button">🎲</a>
+        <a
+          class="carousel-control-roll carousel-action"
+          href="#carousel"
+          role="button"
+          >🎲</a
+        >
+        <a
+          class="carousel-control-login carousel-action"
+          href="#carousel"
+          role="button"
+          data-toggle="modal"
+          data-target="#loginModal"
+          >👤</a
+        >
+      </div>
+    </div>
+
+    <div
+      class="modal fade"
+      id="loginModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="loginModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="loginModalLabel">Log In</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Username</label>
+              <input
+                type="email"
+                class="form-control username"
+              />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary confirm-login">Log In</button>
+          </div>
+        </div>
       </div>
     </div>
   </body>
